# ser-standardizer

./: .gitignore  LICENSE  README.en.md  README.md  README.pt-br.md  pyproject.toml
data/CREMA-D/: VideoDemographics.csv  finishedResponses.csv
docs/: README.md  README.pt-br.md
docs/datasets/: crema_d.md  emodb.md  emouerj.md  iemocap.md  msp_improv.md  msp_podcast.md  ravdess.md
docs/de/: emodb.md
docs/en/: README.md  crema_d.md  emodb.md  emouerj.md  iemocap.md  msp_improv.md  msp_podcast.md  ravdess.md
docs/en/datasets/: crema_d.md  emodb.md  emouerj.md  iemocap.md  msp_improv.md  msp_podcast.md  ravdess.md
docs/pt-br/: crema_d.md  emodb.md  emouerj.md  iemocap.md  msp_improv.md  msp_podcast.md  ravdess.md
jupyter_sketchs/: testing.ipynb
scripts/: build_features.py
src/: main.py
src/loaders/: __init__.py  crema_d.py  iemocap.py  msp_improv.py  ravdess.py
src/ser_standardizer/: __init__.py  api.py  main.py
src/ser_standardizer/features/: extractor.py  preprocessing.py
src/ser_standardizer/loaders/: __init__.py  crema_d.py  emodb.py  emouerj.py  iemocap.py  msp_podcast.py  savee.py
