[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ser-standardizer"
version = "0.1.0"
description = "Uma ferramenta para padronização de datasets de Reconhecimento de Emoção na Fala (SER)."
readme = "README.md"
authors = [
  { name = "Vinicius Suaiden", email = "vinicius.suaiden@usp.br" },
  { name = "Miguel Arjona Ramirez", email = "maramire@usp.br" },
  { name = "Wesley Beccaro", email = "wesleybeccaro@usp.br" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.3.0",
    "audb>=1.0.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
features = [
    "numpy>=1.21.0,<3.0",
    "soundfile>=0.12.0",     
    "scipy>=1.10.0",         
    "ipython>=9.0.0",
    "ipywidgets>=8.1.8",
    "noisereduce>=3.0.3",
    "tqdm>=4.60.0",
    "opensmile>=2.4.0"
]

[project.scripts]
ser-std = "ser_standardizer.main:main"

[tool.setuptools.packages.find]
where = ["src"] 
include = ["ser_standardizer*"]
namespaces = false